--- a/example/DefaultDeferredShadingTest.html
+++ b/example/DefaultDeferredShadingTest.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RenderStateDefTest</title>
+    <title>DefaultDeferredShadingTest</title>
 </head>
 <body>
 <div style="width: 40%;height: 100%;position:fixed">
@@ -20,32 +20,51 @@
     import MaterialDef from "../src/component/Material/MaterialDef.js";
     import FirstPersonController from "../src/component/InputControl/FirstPersonController.js";
     let scene = new Scene({cavnas:document.getElementById('canvas')});
-    // 加载一个材质定义
-    let materialDef = MaterialDef.load("../src/component/Assets/MaterialDef/RenderStateDef");
-    let mat = new Material(scene, {id:"colorMat", materialDef});
-    console.log("materialDef:",materialDef);
-    mat.selectTechnology('FaceCullTechnology');
     let mainCamera = scene.getComponent('mainCamera');
-    mainCamera.lookAt(new Vector3(10, 0, 10), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
+    mainCamera.lookAt(new Vector3(0, 0, 20), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
     let firstPersonController = new FirstPersonController(scene, {id:'myController'});
-    let geometry = new Geometry(scene, {id:'testGeometry'});
-    let mesh = new Mesh();
-    mesh.setData(Mesh.S_POSITIONS, [
+    // 加载一个材质定义
+    let materialDef = MaterialDef.load("../src/component/Assets/MaterialDef/DefaultDeferredShadingTestDef");
+
+    let deferredMat = new Material(scene, {id:"def", materialDef});
+    deferredMat.selectTechnology('TestDeferredShading');
+    let geometry1 = new Geometry(scene, {id:'testGeometry'});
+    let mesh1 = new Mesh();
+    mesh1.setData(Mesh.S_POSITIONS, [
         -5, 5, 0,
         -5, -5, 0,
         5, 5, 0,
         5, -5, 0
     ]);
-    mesh.setData(Mesh.S_INDICES, [
+    mesh1.setData(Mesh.S_INDICES, [
         0, 1, 2,
-        1, 2, 3
+        2, 1, 3
     ]);
-    // let material = new Material(scene, {materialSourceDef:new ColorMatDef()});
-    geometry.setMesh(mesh);
-    geometry.updateBound();
-    geometry.setMaterial(mat);
+    geometry1.setMesh(mesh1);
+    geometry1.updateBound();
+    geometry1.setMaterial(deferredMat);
+
+    let forwardMat = new Material(scene, {id:"def2", materialDef});
+    // let geometry2 = new Geometry(scene, {id:'testGeometry2'});
+    // let mesh2 = new Mesh();
+    // mesh2.setData(Mesh.S_POSITIONS, [
+    //     -8, 5, -5,
+    //     -8, -5, -5,
+    //     5, 5, -5,
+    //     5, -5, -5
+    // ]);
+    // mesh2.setData(Mesh.S_INDICES, [
+    //     0, 1, 2,
+    //     2, 1, 3
+    // ]);
+    // geometry2.setMesh(mesh2);
+    // geometry2.updateBound();
+    // geometry2.setMaterial(forwardMat);
+
+
     let rootNode = new Node(scene, {id:'rootNode'});
-    rootNode.addChildren(geometry);
+    rootNode.addChildren(geometry1);
+    // rootNode.addChildren(geometry2);
     let renderEngine = new RenderEngine();
     renderEngine.addScene(scene);
     renderEngine.launch();
