--- a/example/DefaultDeferredShadingTest.html
+++ b/example/DefaultDeferredShadingTest.html
@@ -5,7 +5,7 @@
     <title>DefaultDeferredShadingTest</title>
 </head>
 <body>
-<div style="width: 40%;height: 100%;position:fixed">
+<div style="width: 100%;height: 100%;position:fixed">
     <canvas id="canvas" style="position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
 </div>
 <script type="module">
@@ -27,14 +27,15 @@
     let materialDef = MaterialDef.load("../src/component/Assets/MaterialDef/DefaultDeferredShadingTestDef");
 
     let deferredMat = new Material(scene, {id:"def", materialDef});
+    console.log("materialDef:" , materialDef);
     deferredMat.selectTechnology('TestDeferredShading');
     let geometry1 = new Geometry(scene, {id:'testGeometry'});
     let mesh1 = new Mesh();
     mesh1.setData(Mesh.S_POSITIONS, [
-        -5, 5, 0,
-        -5, -5, 0,
-        5, 5, 0,
-        5, -5, 0
+        -5, 5, 2,
+        -5, -5, 2,
+        5, 5, 2,
+        5, -5, 2
     ]);
     mesh1.setData(Mesh.S_INDICES, [
         0, 1, 2,
@@ -45,26 +46,26 @@
     geometry1.setMaterial(deferredMat);
 
     let forwardMat = new Material(scene, {id:"def2", materialDef});
-    // let geometry2 = new Geometry(scene, {id:'testGeometry2'});
-    // let mesh2 = new Mesh();
-    // mesh2.setData(Mesh.S_POSITIONS, [
-    //     -8, 5, -5,
-    //     -8, -5, -5,
-    //     5, 5, -5,
-    //     5, -5, -5
-    // ]);
-    // mesh2.setData(Mesh.S_INDICES, [
-    //     0, 1, 2,
-    //     2, 1, 3
-    // ]);
-    // geometry2.setMesh(mesh2);
-    // geometry2.updateBound();
-    // geometry2.setMaterial(forwardMat);
+    let geometry2 = new Geometry(scene, {id:'testGeometry2'});
+    let mesh2 = new Mesh();
+    mesh2.setData(Mesh.S_POSITIONS, [
+        -5, 5, -5,
+        -5, -5, -5,
+        5, 5, 5,
+        5, -5, 5
+    ]);
+    mesh2.setData(Mesh.S_INDICES, [
+        0, 1, 2,
+        2, 1, 3
+    ]);
+    geometry2.setMesh(mesh2);
+    geometry2.updateBound();
+    geometry2.setMaterial(forwardMat);
 
 
     let rootNode = new Node(scene, {id:'rootNode'});
     rootNode.addChildren(geometry1);
-    // rootNode.addChildren(geometry2);
+    rootNode.addChildren(geometry2);
     let renderEngine = new RenderEngine();
     renderEngine.addScene(scene);
     renderEngine.launch();
