--- a/example/FirstPersonControllerTest.html
+++ b/example/FirstPersonControllerTest.html
@@ -5,7 +5,9 @@
     <title>FirstPersonControllerTest</title>
 </head>
 <body>
-    <canvas id="canvas" width="500px" height="500px" style="background-color: aliceblue" tabindex="0"></canvas>
+    <div style="width: 100%;height: 100%;position:fixed">
+        <canvas id="canvas" tabindex="0" width="400" height="300" style="border: none;margin: 0px;padding: 0px;"></canvas>
+    </div>
     <script type="module">
         import Geometry from "../src/component/Node/Geometry.js";
         import Scene from "../src/component/Scene/Scene.js";
@@ -30,7 +32,7 @@
         ]);
         mesh.setData(Mesh.S_INDICES, [
             0, 1, 2,
-            1, 2, 3
+            2, 1, 3
         ]);
         let materialDef = MaterialDef.load("../src/component/Assets/MaterialDef/ColorDef");
         let material = new Material(scene, {id:"colorMat", materialDef});
@@ -39,6 +41,25 @@
         geometry.setMaterial(material);
         let rootNode = new Node(scene, {id:'rootNode'});
         rootNode.addChildren(geometry);
+
+        let geometry2 = new Geometry(scene, {id:'testGeometry2'});
+        let mesh2 = new Mesh();
+        mesh2.setData(Mesh.S_POSITIONS, [
+            -5, 5, -7,
+            -5, -5, -7,
+            5, 5, -7,
+            5, -5, -7
+        ]);
+        mesh2.setData(Mesh.S_INDICES, [
+            0, 1, 2,
+            2, 1, 3
+        ]);
+        let material2 = new Material(scene, {id:"colorMat2", materialDef});
+        material2.selectTechnology('Green');
+        geometry2.setMesh(mesh2);
+        geometry2.updateBound();
+        geometry2.setMaterial(material2);
+
         let renderEngine = new RenderEngine();
         renderEngine.addScene(scene);
         renderEngine.launch();
