--- a/Example/CameraTest1.html
+++ b/Example/CameraTest1.html
@@ -7,14 +7,14 @@
 <body>
 <canvas id="canvas" width="600px" height="400px" style="background-color: aliceblue"></canvas>
 <script type="module">
-    import Geometry from "../src/component/Node/Geometry.js";
-    import Scene from "../src/component/Scene/Scene.js";
-    import RenderEngine from "../src/component/RenderEngine.js";
-    import Node from "../src/component/Node/Node.js";
-    import Mesh from "../src/component/WebGL/Mesh.js";
-    import Material from "../src/component/Material/Material.js";
-    import Vector3 from "../src/component/Math3d/Vector3.js";
-    import MaterialDef from "../src/component/Material/MaterialDef.js";
+    import Geometry from "../src/Core/Node/Geometry.js";
+    import Scene from "../src/Core/Scene/Scene.js";
+    import RenderEngine from "../src/Core/RenderEngine.js";
+    import Node from "../src/Core/Node/Node.js";
+    import Mesh from "../src/Core/WebGL/Mesh.js";
+    import Material from "../src/Core/Material/Material.js";
+    import Vector3 from "../src/Core/Math3d/Vector3.js";
+    import MaterialDef from "../src/Core/Material/MaterialDef.js";
     let scene = new Scene({cavnas:document.getElementById('canvas')});
     let mainCamera = scene.getComponent('mainCamera');
     mainCamera.lookAt(new Vector3(10, 10, 10), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
@@ -30,7 +30,7 @@
         0, 1, 2,
         1, 2, 3
     ]);
-    let materialDef = MaterialDef.load("../src/component/Assets/MaterialDef/ColorDef");
+    let materialDef = MaterialDef.load("../src/Core/Assets/MaterialDef/ColorDef");
     let material = new Material(scene, {id:"colorMat", materialDef});
     geometry.setMesh(mesh);
     geometry.updateBound();
