--- a/Example/GeometryTest1.html
+++ b/Example/GeometryTest1.html
@@ -7,13 +7,13 @@
 <body>
     <canvas id="canvas" width="500px" height="500px" style="background-color: aliceblue"></canvas>
     <script type="module">
-        import Geometry from "../src/component/Node/Geometry.js";
-        import Scene from "../src/component/Scene/Scene.js";
-        import RenderEngine from "../src/component/RenderEngine.js";
-        import Node from "../src/component/Node/Node.js";
-        import Mesh from "../src/component/WebGL/Mesh.js";
-        import Material from "../src/component/Material/Material.js";
-        import GuiMatDef from "../src/component/Assets/MaterialDef/GuiMatDef.js";
+        import Geometry from "../src/Core/Node/Geometry.js";
+        import Scene from "../src/Core/Scene/Scene.js";
+        import RenderEngine from "../src/Core/RenderEngine.js";
+        import Node from "../src/Core/Node/Node.js";
+        import Mesh from "../src/Core/WebGL/Mesh.js";
+        import Material from "../src/Core/Material/Material.js";
+        import GuiMatDef from "../src/Core/Assets/MaterialDef/GuiMatDef.js";
         let scene = new Scene({cavnas:document.getElementById('canvas')});
         let geometry = new Geometry(scene, {id:'testGeometry'});
         let mesh = new Mesh();
