--- a/Example/OctreeCullingTest.html
+++ b/Example/OctreeCullingTest.html
@@ -2,35 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FrustumCullingTest</title>
+    <title>OctreeCullingTest</title>
 </head>
 <body>
 <div style="width: 100%;height: 100%;position:fixed;left: 0px;top: 0px;">
     <canvas id="canvas" style="position:absolute;left: 0px;top: 0px;margin: 0px;padding: 0px;" tabindex="0"></canvas>
 </div>
 <script type="module">
-    import Scene from "../src/component/Scene/Scene.js";
-    import RenderEngine from "../src/component/RenderEngine.js";
-    import Node from "../src/component/Node/Node.js";
-    import Material from "../src/component/Material/Material.js";
-    import Vector3 from "../src/component/Math3d/Vector3.js";
-    import MaterialDef from "../src/component/Material/MaterialDef.js";
-    import FirstPersonController from "../src/component/InputControl/FirstPersonController.js";
-    import DirectionalLight from "../src/component/Light/DirectionalLight.js";
-    import Box from "../src/component/Node/Shape/Box.js";
-    import Sphere from "../src/component/Node/Shape/Sphere.js";
-    import Plane from "../src/component/Node/Shape/Plane.js";
-    import Geometry from "../src/component/Node/Geometry.js";
-    import MeshFactor from "../src/component/Util/MeshFactor.js";
-    import MoreMath from "../src/component/Math3d/MoreMath.js";
+    import Scene from "../src/Core/Scene/Scene.js";
+    import RenderEngine from "../src/Core/RenderEngine.js";
+    import Node from "../src/Core/Node/Node.js";
+    import Material from "../src/Core/Material/Material.js";
+    import Vector3 from "../src/Core/Math3d/Vector3.js";
+    import MaterialDef from "../src/Core/Material/MaterialDef.js";
+    import FirstPersonController from "../src/Core/InputControl/FirstPersonController.js";
+    import DirectionalLight from "../src/Core/Light/DirectionalLight.js";
+    import Box from "../src/Core/Node/Shape/Box.js";
+    import Sphere from "../src/Core/Node/Shape/Sphere.js";
+    import Plane from "../src/Core/Node/Shape/Plane.js";
+    import Geometry from "../src/Core/Node/Geometry.js";
+    import MeshFactor from "../src/Core/Util/MeshFactor.js";
+    import MoreMath from "../src/Core/Math3d/MoreMath.js";
     import Stats from "./stats.min.js";
-    import Camera from "../src/component/Scene/Camera.js";
+    import Camera from "../src/Core/Scene/Camera.js";
+    import OctCullingControl from "../src/Core/Optimization/OctCullingControl.js";
     let scene = new Scene({cavnas:document.getElementById('canvas')});
     let testCamera = new Camera(scene, {id:'testCamera'});
     testCamera.lookAt(new Vector3(25, 0, 25), new Vector3(0, 0, 0), new Vector3(0, 1, 0));
     let firstPersonController = new FirstPersonController(scene, {id:'myController'});
     // // 加载一个材质定义
-    let materialDef = MaterialDef.load("../src/component/Assets/MaterialDef/BasicLightingDef");
+    let materialDef = MaterialDef.load("../src/Core/Assets/MaterialDef/BasicLightingDef");
     console.log("materialDef:",materialDef);
     let basicLightingMat = new Material(scene, {id:"basicLightingMat", materialDef});
     basicLightingMat.selectTechnology('BlinnPhongLight2');
@@ -38,7 +39,7 @@
     let wireFrustum = new Geometry(scene, {id:'wireFrustum'});
     // 根据当前相机创建测试用的视锥体
     wireFrustum.setMesh(MeshFactor.createViewFrustumMeshFromCamera(testCamera));
-    wireFrustum.setMaterial(new Material(scene, {id:'colorWireFrustum', materialDef:MaterialDef.load("../src/component/Assets/MaterialDef/ColorDef")}));
+    wireFrustum.setMaterial(new Material(scene, {id:'colorWireFrustum', materialDef:MaterialDef.load("../src/Core/Assets/MaterialDef/ColorDef")}));
     wireFrustum.updateBound();
 
     let rootNode = new Node(scene, {id:'rootNode'});
@@ -58,11 +59,10 @@
         box.setLocalTranslationXYZ(Math.random() * (max - min + 1) + min, Math.random() * (max - min + 1) + min, Math.random() * (max - min + 1) + min);
         box.setLocalRotationFromEuler(MoreMath.toRadians(Math.random() * 360), MoreMath.toRadians(Math.random() * 360), MoreMath.toRadians(Math.random() * 360));
         cubes.addChildren(box);
-
-        // 绘制AABB包围体
     }
-    let aabb = cubes.getAABBBoundingBox();
-    console.log("aabb:",aabb);
+    // 使用OctCullingControl来管理静态场景
+    let octCullingControl = new OctCullingControl(cubes, {id:'octCulling'});
+
     // 再次将相机设置为一个最佳观测点(以便观察上面的视锥体)
     let mainCamera = scene.getComponent('mainCamera');
     mainCamera.lookAt(new Vector3(-150, 250, 200), new Vector3(-50, 0, -50), new Vector3(0, 1, 0));
@@ -88,16 +88,6 @@
     // 设置testCamera为剔除相机
     scene.setFrustumCullingCamera(testCamera);
     scene.on('update', (exTime)=>{
-        // 执行旋转
-        // cubes.getChildren().forEach(node=>{
-        //     dx += Math.random() * 0.2 * exTime;
-        //     dy += Math.random() * 0.2 * exTime;
-        //     dz += Math.random() * 0.2 * exTime;
-        //     let x = MoreMath.toRadians(dx);
-        //     let y = MoreMath.toRadians(dy);
-        //     let z = MoreMath.toRadians(dz);
-        //     node.setLocalRotationFromEuler(x, y, z);
-        // });
         stats.update();
     });
 </script>
